--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,9 @@
 		"target": "es6",
 		"outDir": "out",
 		"rootDir": "src",
-		"sourceMap": true
+		"strict": true,
+		"sourceMap": true,
+		"moduleResolution": "node"
 	},
 	"include": [
 		"src"
@@ -12,9 +14,5 @@
 	"exclude": [
 		"node_modules",
 		".vscode-test"
-	],
-	"references": [
-		{ "path": "./client" },
-		{ "path": "./server" }
 	]
 }
