--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "escript-lsp",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"description": "escript-lsp",
 	"contributors": [
 		{
-			"name": "Kevin Eady",
-			"url": "https://github.com/KevinEady"
+			"name": "POL Core Team",
+			"url": "https://github.com/polserver"
 		}
 	],
 	"license": "MIT",
@@ -13,12 +13,15 @@
 	"categories": [],
 	"keywords": [],
 	"engines": {
-		"vscode": "^1.43.0"
+		"vscode": "^1.52.0"
 	},
 	"activationEvents": [
 		"*"
 	],
-	"main": "./client/out/extension",
+	"repository": {
+		"url": "https://github.com/polserver/vscode-escript"
+	},
+	"main": "./dist/extension",
 	"contributes": {
 		"languages": [
 			{
@@ -42,59 +45,41 @@
 				"path": "./grammars/escript.json"
 			}
 		],
-		"commands": [
-			{
-				"command": "myExtension.sayHello",
-				"title": "Say Hello"
-			}
-		],
-		"menus": {
-			"commandPalette": [
-				{
-					"command": "myExtension.sayHello",
-					"when": "editorLangId == escript"
-				}
-			]
-		},
 		"configuration": {
 			"type": "object",
-			"title": "Example configuration",
+			"title": "EScript",
 			"properties": {
-				"languageServerExample.maxNumberOfProblems": {
-					"scope": "resource",
-					"type": "number",
-					"default": 100,
-					"description": "Controls the maximum number of problems produced by the server."
-				},
-				"languageServerExample.trace.server": {
+				"escript.ecompile.path": {
 					"scope": "window",
 					"type": "string",
-					"enum": [
-						"off",
-						"messages",
-						"verbose"
-					],
-					"default": "off",
-					"description": "Traces the communication between VS Code and the language server."
+					"description": "Specific path to use for ecompile.exe"
 				}
 			}
 		}
 	},
 	"scripts": {
-		"vscode:prepublish": "cd client && npm run update-vscode && cd .. && npm run compile",
-		"compile": "tsc -b && js-yaml grammars/escript.yml > grammars/escript.json",
-		"watch": "tsc -b -w",
-		"postinstall": "cd common && npm install && cd ../doctrine && npm install --production && cd ../client && npm install && cd ../server && npm install && cd ..",
-		"test": "sh ./scripts/e2e.sh",
+		"vscode:prepublish": "npm run compile && webpack --mode production",
+		"webpack": "webpack --mode development",
+		"webpack-dev": "webpack --mode development --watch",
+		"compile": "js-yaml grammars/escript.yml > grammars/escript.json",
+		"test": "mocha --require ts-node/register --ui tdd 'specs/**/*.ts'",
 		"eslint": "eslint \"**/*.{js,ts}\""
 	},
+	"dependencies": {
+		"vscode-languageclient": "^7.0.0"
+	},
 	"devDependencies": {
-		"@types/mocha": "^5.2.7",
-		"@types/node": "^12.12.0",
-		"@typescript-eslint/parser": "^2.3.0",
-		"eslint": "^6.4.0",
-		"js-yaml": "^3.13.1",
-		"mocha": "^6.2.2",
-		"typescript": "^3.8.3"
+		"@types/mocha": "^8.2.0",
+		"@types/node": "^12.19.11",
+		"@types/vscode": "^1.52.0",
+		"@typescript-eslint/parser": "^4.11.0",
+		"eslint": "^7.16.0",
+		"js-yaml": "^3.14.1",
+		"mocha": "^8.2.1",
+		"ts-loader": "^8.0.12",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.1.3",
+		"webpack": "^5.11.0",
+		"webpack-cli": "^4.3.0"
 	}
 }
