--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "escript-lsp",
-	"version": "0.2.0",
+	"version": "0.3.0",
 	"description": "escript-lsp",
 	"contributors": [
 		{
@@ -21,7 +21,7 @@
 	"repository": {
 		"url": "https://github.com/polserver/vscode-escript"
 	},
-	"main": "./dist/extension",
+	"main": "./client/out/extension",
 	"contributes": {
 		"languages": [
 			{
@@ -58,11 +58,10 @@
 		}
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile && webpack --mode production",
-		"webpack": "webpack --mode development",
-		"webpack-dev": "webpack --mode development --watch",
+		"vscode:prepublish": "npm run compile",
+		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
+		"watch": "npm run compile && tsc -b -w",
 		"compile": "js-yaml grammars/escript.yml > grammars/escript.json",
-		"test": "mocha --require ts-node/register --ui tdd 'specs/**/*.ts'",
 		"eslint": "eslint \"**/*.{js,ts}\""
 	},
 	"dependencies": {
@@ -71,15 +70,10 @@
 	"devDependencies": {
 		"@types/mocha": "^8.2.0",
 		"@types/node": "^12.19.11",
-		"@types/vscode": "^1.52.0",
 		"@typescript-eslint/parser": "^4.11.0",
 		"eslint": "^7.16.0",
 		"js-yaml": "^3.14.1",
-		"mocha": "^8.2.1",
 		"ts-loader": "^8.0.12",
-		"ts-node": "^9.1.1",
-		"typescript": "^4.1.3",
-		"webpack": "^5.11.0",
-		"webpack-cli": "^4.3.0"
+		"typescript": "^4.1.3"
 	}
 }
