--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
-		"target": "es6",
+		"target": "es2019",
+		"lib": ["ES2019"],
 		"outDir": "out",
 		"rootDir": "src",
 		"strict": true,
@@ -14,5 +15,9 @@
 	"exclude": [
 		"node_modules",
 		".vscode-test"
+	],
+	"references": [
+		{ "path": "./client" },
+		{ "path": "./server" }
 	]
 }
