--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,6 +1,14 @@
-.vscode
-node_modules
-out/
-src/
-tsconfig.json
-webpack.config.js
+.vscode/**
+**/*.ts
+**/*.map
+.gitignore
+**/tsconfig.json
+**/tsconfig.base.json
+contributing.md
+.github/**
+client/node_modules/**
+!client/node_modules/vscode-jsonrpc/**
+!client/node_modules/vscode-languageclient/**
+!client/node_modules/vscode-languageserver-protocol/**
+!client/node_modules/vscode-languageserver-types/**
+!client/node_modules/semver/**
