--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 	"repository": {
 		"url": "https://github.com/polserver/vscode-escript"
 	},
-	"main": "./client/out/extension",
+	"main": "./client/out/extension.js",
 	"contributes": {
 		"languages": [
 			{
@@ -44,24 +44,15 @@
 				"scopeName": "source.escript",
 				"path": "./grammars/escript.json"
 			}
-		],
-		"configuration": {
-			"type": "object",
-			"title": "EScript",
-			"properties": {
-				"escript.ecompile.path": {
-					"scope": "window",
-					"type": "string",
-					"description": "Specific path to use for ecompile.exe"
-				}
-			}
-		}
+		]
 	},
 	"scripts": {
-		"vscode:prepublish": "npm run compile",
+		"vscode:prepublish": "npm run clean && npm run compile",
 		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
-		"watch": "npm run compile && tsc -b -w",
-		"compile": "js-yaml grammars/escript.yml > grammars/escript.json",
+		"watch": "npm run grammar && tsc -b -w",
+		"compile": "npm run grammar && tsc -b",
+		"clean": "rimraf client/out server/out grammars/escript.json",
+		"grammar": "js-yaml grammars/escript.yml > grammars/escript.json",
 		"eslint": "eslint \"**/*.{js,ts}\""
 	},
 	"dependencies": {
@@ -73,6 +64,7 @@
 		"@typescript-eslint/parser": "^4.11.0",
 		"eslint": "^7.16.0",
 		"js-yaml": "^3.14.1",
+		"rimraf": "^3.0.2",
 		"ts-loader": "^8.0.12",
 		"typescript": "^4.1.3"
 	}
