--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,8 @@ jobs:
 
       - run: npm install
 
+      - run: npm test
+
       - run: npx vsce package
 
       - name: Upload Extension Artifact
