--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"watch": "npm run grammar && tsc -b -w",
 		"compile": "npm run grammar && tsc -b",
 		"clean": "rimraf client/out server/out grammars/escript.json",
+		"test": "jest",
 		"grammar": "js-yaml grammars/escript.yml > grammars/escript.json",
 		"eslint": "eslint \"**/*.{js,ts}\""
 	},
@@ -59,12 +60,16 @@
 		"vscode-languageclient": "^7.0.0"
 	},
 	"devDependencies": {
-		"@types/mocha": "^8.2.0",
+		"@types/jest": "^26.0.20",
+		"@types/mock-fs": "^4.13.0",
 		"@types/node": "^12.19.11",
 		"@typescript-eslint/parser": "^4.11.0",
 		"eslint": "^7.16.0",
+		"jest": "^26.6.3",
 		"js-yaml": "^3.14.1",
+		"mock-fs": "^4.13.0",
 		"rimraf": "^3.0.2",
+		"ts-jest": "^26.5.0",
 		"ts-loader": "^8.0.12",
 		"typescript": "^4.1.3"
 	}
