--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,14 @@
 	"engines": {
 		"vscode": "^1.52.0"
 	},
+	"scripts": {
+		"test": "node ./test/runTest.js"
+	},
 	"dependencies": {
 		"vscode-languageclient": "^7.0.0"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.52.0"
+		"@types/vscode": "^1.52.0",
+		"vscode-test": "^1.5.0"
 	}
 }
