Fix package, readme; e2e only for mac

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,14 +1,19 @@
 .vscode/**
 **/*.ts
 **/*.map
+**/coverage
+**/*.d.ts
 .gitignore
 **/tsconfig.json
 **/tsconfig.base.json
-contributing.md
 .github/**
+client/test/**
 client/node_modules/**
 !client/node_modules/vscode-jsonrpc/**
 !client/node_modules/vscode-languageclient/**
 !client/node_modules/vscode-languageserver-protocol/**
 !client/node_modules/vscode-languageserver-types/**
 !client/node_modules/semver/**
+server/test/**
+client/jest.e2e.config.js
+server/jest.config.js
