--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
 
       - run: npm install
 
-      - run: npm test && npm run e2e
+      - run: npm test
 
       - run: npx vsce package
 
@@ -40,7 +40,7 @@ jobs:
 
       - run: npm install
 
-      - run: npm test && npm run e2e
+      - run: npm test
   mac:
     name: Test [Mac]
     runs-on: macos-latest
