--- a/server/package.json
+++ b/server/package.json
@@ -1,15 +1,20 @@
 {
-	"name": "lsp-sample-server",
-	"description": "Example implementation of a language server in node.",
-	"version": "1.0.0",
-	"author": "Microsoft Corporation",
+	"name": "escript-lsp-server",
+	"description": "Implementation of an EScript language server in node",
+	"version": "0.1.0",
+	"contributors": [
+		{
+			"name": "POL Core Team",
+			"url": "https://github.com/polserver"
+		}
+	],
 	"license": "MIT",
 	"engines": {
 		"node": "*"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/Microsoft/vscode-extension-samples"
+		"url": "https://github.com/polserver/vscode-escript"
 	},
 	"dependencies": {
 		"vscode-languageserver": "^7.0.0",
