Initial POC on native dll

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run clean && npm run compile",
-		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
+		"postinstall": "cd client && npm install && cd ../native && npm install && cd ../server && npm install",
 		"watch": "npm run grammar && tsc -b -w",
 		"compile": "npm run grammar && tsc -b",
 		"clean": "rimraf client/out server/out grammars/escript.json",
