--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
 		"url": "https://github.com/polserver/vscode-escript"
 	},
 	"dependencies": {
+		"vscode-escript-native": "file:../native",
 		"vscode-languageserver": "^7.0.0",
 		"vscode-languageserver-textdocument": "^1.0.1",
 		"vscode-uri": "^3.0.2"
