--- a/native/package.json
+++ b/native/package.json
@@ -36,6 +36,7 @@
 	"scripts": {
 		"install": "prebuild-install --runtime napi || cmake-js rebuild && tsc",
 		"rebuild": "cmake-js rebuild",
+		"build": "cmake-js build",
 		"prebuild": "prebuild --backend cmake-js --runtime napi --all --strip --verbose",
 		"upload": "prebuild --runtime napi --upload ${GITHUB_TOKEN}"
 	}
