--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Upload Extension Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: escript-lsp
+          name: escript-lsp-linux
           path: escript-lsp-*.vsix
   windows:
     name: Test [Windows]
@@ -41,6 +41,14 @@ jobs:
       - run: npm install
 
       - run: npm test
+
+      - run: npx vsce package
+
+      - name: Upload Extension Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: escript-lsp-windows
+          path: escript-lsp-*.vsix
   mac:
     name: Test [Mac]
     runs-on: macos-latest
@@ -50,6 +58,20 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Install polserver Dependencies
+        shell: pwsh
+        run: |
+          brew install pkg-config
+          brew reinstall openssl@1.1
+          brew install ninja openssl@1.1 glib-openssl mysql-client mysql-connector-c++
+          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:/usr/local/opt/mysql-client/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
       - run: npm install
 
       - run: npm test && npm run e2e
+
+      - name: Upload Extension Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: escript-lsp-osx
+          path: escript-lsp-*.vsix
