--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,3 +17,27 @@ client/node_modules/**
 server/test/**
 client/jest.e2e.config.js
 server/jest.config.js
+native/.clang-format
+native/CMakeLists.txt
+native/cpp/**
+native/prebuilds/**
+native/build/**
+!native/build/Release/**
+native/polserver/**
+native/node_modules/**
+!native/node_modules/detect-libc/**
+!native/node_modules/expand-template/**
+!native/node_modules/github-from-/**
+!native/node_modules/minimist/**
+!native/node_modules/mkdirp-classic/**
+!native/node_modules/napi-build-utils/**
+!native/node_modules/node-abi/**
+!native/node_modules/noop-logger/**
+!native/node_modules/npmlog/**
+!native/node_modules/pump/**
+!native/node_modules/rc/**
+!native/node_modules/simple-get/**
+!native/node_modules/tar-fs/**
+!native/node_modules/tunnel-agent/**
+!native/node_modules/which-pm-runs/**
+!native/node_modules/detect-libc/**
