--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Cache polserver
+        uses: actions/cache@v2
+        with:
+          path: native/polserver
+          key: linux-polserver
+
       - run: npm install
 
       - run: npm test
@@ -29,6 +35,7 @@ jobs:
         with:
           name: escript-lsp-linux
           path: escript-lsp-*.vsix
+
   windows:
     name: Test and Package [Windows]
     runs-on: windows-latest
@@ -37,6 +44,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+
+      - name: Cache polserver
+        uses: actions/cache@v2
+        with:
+          path: native/polserver
+          key: windows-polserver
 
       - run: npm install
 
@@ -58,6 +71,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: recursive
+
+      - name: Cache polserver
+        uses: actions/cache@v2
+        with:
+          path: native/polserver
+          key: mac-polserver
 
       - name: Install polserver Dependencies
         shell: pwsh
