--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: native/polserver
-          key: windows-ninja-polserver
+          key: windows-polserver
 
       - run: npm install
 
