--- a/native/package.json
+++ b/native/package.json
@@ -31,8 +31,8 @@
 		]
 	},
 	"scripts": {
-		"install": "cmake-js rebuild -G Ninja && tsc",
-		"rebuild": "cmake-js rebuild -G Ninja",
-		"build": "cmake-js build -G Ninja"
+		"install": "cmake-js rebuild && tsc",
+		"rebuild": "cmake-js rebuild",
+		"build": "cmake-js build"
 	}
 }
