--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
 		"compile": "npm run grammar && tsc -b",
 		"clean": "rimraf client/out server/out grammars/escript.json",
 		"e2e": "cd client && npm test",
-		"test": "jest --coverage --config=./server/jest.config.js",
+		"test": "jest --coverage",
 		"grammar": "js-yaml grammars/escript.yml > grammars/escript.json",
 		"eslint": "eslint \"**/*.{js,ts}\""
 	},
