Address review comments

--- a/native/CMakeLists.txt
+++ b/native/CMakeLists.txt
@@ -24,9 +24,9 @@ target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_ADDON_API_DIR})
 
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
-set(BLIB_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/polserver")
-set(BLIB_BUILD_DIR "${BLIB_SOURCE_DIR}/bin-build")
-set(BLIB_BIN_DIR "${BLIB_SOURCE_DIR}/bin")
+set(BSCRIPT_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/polserver")
+set(BSCRIPT_BUILD_DIR "${BSCRIPT_SOURCE_DIR}/bin-build")
+set(BSCRIPT_BIN_DIR "${BSCRIPT_SOURCE_DIR}/bin")
 
 if (WIN32)
 
@@ -36,15 +36,15 @@ if (WIN32)
     set(ANTLR_LIB "antlr4-runtime-static.lib")
   endif()
 
-  set(BLIB_LIB "${BLIB_SOURCE_DIR}/bin/Release/bscript.lib")
+  set(BSCRIPT_LIB "${BSCRIPT_SOURCE_DIR}/bin/Release/bscript.lib")
 
-  set(BLIB_LIBS
-    "${BLIB_LIB}"
-    "${BLIB_SOURCE_DIR}/bin/Release/clib.lib"
-    "${BLIB_SOURCE_DIR}/bin/Release/plib.lib"
-    "${BLIB_SOURCE_DIR}/bin/Release/format.lib"
-    "${BLIB_SOURCE_DIR}/bin/Release/stackwalk.lib"
-    "${BLIB_SOURCE_DIR}/lib/antlr/install/lib/${ANTLR_LIB}"
+  set(BSCRIPT_LIBS
+    "${BSCRIPT_LIB}"
+    "${BSCRIPT_SOURCE_DIR}/bin/Release/clib.lib"
+    "${BSCRIPT_SOURCE_DIR}/bin/Release/plib.lib"
+    "${BSCRIPT_SOURCE_DIR}/bin/Release/format.lib"
+    "${BSCRIPT_SOURCE_DIR}/bin/Release/stackwalk.lib"
+    "${BSCRIPT_SOURCE_DIR}/lib/antlr/install/lib/${ANTLR_LIB}"
   )
 
   target_link_libraries(${PROJECT_NAME}
@@ -53,14 +53,14 @@ if (WIN32)
 
 else()
 
-  set(BLIB_LIB "${BLIB_SOURCE_DIR}/bin/libbscript.a")
+  set(BSCRIPT_LIB "${BSCRIPT_SOURCE_DIR}/bin/libbscript.a")
 
-  set(BLIB_LIBS
-    "${BLIB_LIB}"
-    "${BLIB_SOURCE_DIR}/bin/libclib.a"
-    "${BLIB_SOURCE_DIR}/bin/libplib.a"
-    "${BLIB_SOURCE_DIR}/bin/libformat.a"
-    "${BLIB_SOURCE_DIR}/lib/antlr/install/lib/libantlr4-runtime.a"
+  set(BSCRIPT_LIBS
+    "${BSCRIPT_LIB}"
+    "${BSCRIPT_SOURCE_DIR}/bin/libclib.a"
+    "${BSCRIPT_SOURCE_DIR}/bin/libplib.a"
+    "${BSCRIPT_SOURCE_DIR}/bin/libformat.a"
+    "${BSCRIPT_SOURCE_DIR}/lib/antlr/install/lib/libantlr4-runtime.a"
   )
 endif()
 
@@ -72,19 +72,19 @@ if (MSVC)
   set(CMAKE_CXX_FLAGS_DEBUG "/MTd")
 endif()
 
-if (NOT EXISTS "${BLIB_LIB}")
+if (NOT EXISTS "${BSCRIPT_LIB}")
   message("- will build libbscript")
   ExternalProject_Add(libbscript
-    SOURCE_DIR  ${BLIB_SOURCE_DIR}
+    SOURCE_DIR  ${BSCRIPT_SOURCE_DIR}
     PREFIX blinb
     CMAKE_ARGS -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER} -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER} -DONLY_ECOMPILE=On
 
-    BINARY_DIR ${BLIB_BUILD_DIR}
+    BINARY_DIR ${BSCRIPT_BUILD_DIR}
 
     BUILD_COMMAND ${CMAKE_COMMAND} --build . --config Release
     INSTALL_COMMAND ""
 
-    BUILD_BYPRODUCTS ${BLIB_LIBS}
+    BUILD_BYPRODUCTS ${BSCRIPT_LIBS}
     LOG_DOWNLOAD 1
     LOG_CONFIGURE 1
     LOG_BUILD 1
@@ -98,13 +98,13 @@ else()
 endif()
 
 target_include_directories(${PROJECT_NAME} PRIVATE
-  "${BLIB_SOURCE_DIR}/pol-core"
-  "${BLIB_SOURCE_DIR}/lib"
-  "${BLIB_SOURCE_DIR}/bin-build"
-  "${BLIB_SOURCE_DIR}/lib/antlr/install/include/antlr4-runtime"
+  "${BSCRIPT_SOURCE_DIR}/pol-core"
+  "${BSCRIPT_SOURCE_DIR}/lib"
+  "${BSCRIPT_SOURCE_DIR}/bin-build"
+  "${BSCRIPT_SOURCE_DIR}/lib/antlr/install/include/antlr4-runtime"
 )
 
-target_link_libraries(${PROJECT_NAME} ${BLIB_LIBS})
+target_link_libraries(${PROJECT_NAME} ${BSCRIPT_LIBS})
 
 if(MSVC)
     add_compile_options(
