Introduce using static bscript lib (#4)
* Initial POC on native dll

* Add polserver submodule

* Add POC compiler code

* Various build attempt commits

* Add tests...!

* Address review comments

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,3 +17,11 @@ client/node_modules/**
 server/test/**
 client/jest.e2e.config.js
 server/jest.config.js
+native/.clang-format
+native/CMakeLists.txt
+native/cpp/**
+native/prebuilds/**
+native/build/**
+!native/build/Release/**
+native/polserver/**
+native/node_modules/**
