--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
 	},
 	"scripts": {
 		"vscode:prepublish": "npm run clean && npm run compile",
-		"postinstall": "cd client && npm install && cd ../server && npm install && cd ..",
+		"postinstall": "cd client && npm install && cd ../native && npm install && cd ../server && npm install",
 		"watch": "npm run grammar && tsc -b -w",
 		"compile": "npm run grammar && tsc -b",
 		"clean": "rimraf client/out server/out grammars/escript.json",
 		"e2e": "cd client && npm test",
-		"test": "jest --coverage --config=./server/jest.config.js",
+		"test": "jest --coverage",
 		"grammar": "js-yaml grammars/escript.yml > grammars/escript.json",
 		"eslint": "eslint \"**/*.{js,ts}\""
 	},
