--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Cache polserver
+        uses: actions/cache@v2
+        with:
+          path: native/polserver
+          key: linux-polserver
+
       - run: npm install
 
       - run: npm test
@@ -27,10 +33,11 @@ jobs:
       - name: Upload Extension Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: escript-lsp
+          name: escript-lsp-linux
           path: escript-lsp-*.vsix
+
   windows:
-    name: Test [Windows]
+    name: Test and Package [Windows]
     runs-on: windows-latest
 
     steps:
@@ -38,11 +45,26 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Cache polserver
+        uses: actions/cache@v2
+        with:
+          path: native/polserver
+          key: windows-polserver
+
       - run: npm install
 
       - run: npm test
+
+      - run: npx vsce package
+
+      - name: Upload Extension Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: escript-lsp-windows
+          path: escript-lsp-*.vsix
+
   mac:
-    name: Test [Mac]
+    name: Test and Package [Mac]
     runs-on: macos-latest
 
     steps:
@@ -50,6 +72,28 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Cache polserver
+        uses: actions/cache@v2
+        with:
+          path: native/polserver
+          key: mac-polserver
+
+      - name: Install polserver Dependencies
+        shell: pwsh
+        run: |
+          brew install pkg-config
+          brew reinstall openssl@1.1
+          brew install ninja openssl@1.1 glib-openssl mysql-client mysql-connector-c++
+          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:/usr/local/opt/mysql-client/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
       - run: npm install
 
-      - run: npm test && npm run e2e
+      - run: npm test && echo npm run e2e
+
+      - run: npx vsce package
+
+      - name: Upload Extension Artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: escript-lsp-osx
+          path: escript-lsp-*.vsix
