--- a/native/package.json
+++ b/native/package.json
@@ -32,7 +32,7 @@
 	},
 	"scripts": {
 		"install": "cmake-js rebuild && tsc",
-		"rebuild": "cmake-js rebuild",
-		"build": "cmake-js build"
+		"rebuild": "cmake-js rebuild -D",
+		"build": "cmake-js build -D"
 	}
 }
