--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: native/polserver
-          key: linux-polserver
+          key: linux-polserver-${{ hashFiles('.git/modules/native/polserver/logs/HEAD') }}
 
       - run: npm install
 
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: native/polserver
-          key: windows-polserver
+          key: windows-polserver-${{ hashFiles('.git/modules/native/polserver/logs/HEAD') }}
 
       - run: npm install
 
@@ -76,7 +76,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: native/polserver
-          key: mac-polserver
+          key: mac-polserver-${{ hashFiles('.git/modules/native/polserver/logs/HEAD') }}
 
       - name: Install polserver Dependencies
         shell: pwsh
