--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: native/polserver
-          key: linux-polserver-a6323c77a
+          key: linux-polserver-a6323c77a.2
 
       - run: npm install
 
@@ -49,7 +49,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: native/polserver
-          key: windows-polserver-a6323c77a
+          key: windows-polserver-a6323c77a.2
 
       - run: npm install
 
@@ -76,7 +76,7 @@ jobs:
         uses: actions/cache@v2
         with:
           path: native/polserver
-          key: mac-polserver-a6323c77a
+          key: mac-polserver-a6323c77a.2
 
       - name: Install polserver Dependencies
         shell: pwsh
