--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,18 +72,18 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Cache polserver
-        uses: actions/cache@v2
-        with:
-          path: native/polserver
-          key: mac-polserver-a6323c77a.3
+      # - name: Cache polserver
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: native/polserver
+      #     key: mac-polserver-a6323c77a.3
 
-      - name: Install polserver Dependencies
-        shell: pwsh
-        run: |
-          brew install pkg-config
-          brew install ninja openssl@1.1
-          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+      # - name: Install polserver Dependencies
+      #   shell: pwsh
+      #   run: |
+      #     brew install pkg-config
+      #     brew install ninja openssl@1.1
+      #     echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - run: npm install
 
