--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,12 +78,10 @@ jobs:
       #     path: native/polserver
       #     key: mac-polserver-a6323c77a.3
 
-      # - name: Install polserver Dependencies
-      #   shell: pwsh
-      #   run: |
-      #     brew install pkg-config
-      #     brew install ninja openssl@1.1
-      #     echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+      - name: Set polserver Dependencies
+        shell: pwsh
+        run: |
+          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - run: npm install
 
