--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,19 +72,16 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Cache polserver
-        uses: actions/cache@v2
-        with:
-          path: native/polserver
-          key: mac-polserver-a6323c77a
+      # - name: Cache polserver
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: native/polserver
+      #     key: mac-polserver-a6323c77a.3
 
-      - name: Install polserver Dependencies
+      - name: Set polserver Dependencies
         shell: pwsh
         run: |
-          brew install pkg-config
-          brew reinstall openssl@1.1
-          brew install ninja openssl@1.1 glib-openssl mysql-client mysql-connector-c++
-          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:/usr/local/opt/mysql-client/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          echo "PKG_CONFIG_PATH=/usr/local/opt/openssl@1.1/lib/pkgconfig:$Env:PKG_CONFIG_PATH" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
       - run: npm install
 
