--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,15 +18,16 @@ jobs:
         with:
           submodules: recursive
 
-      - id: get-ref
+      - name: Get polserver HEAD ref
+        id: get-ref
         run: |
           echo ::set-output name=ref::$( cd native/polserver && git log -1 --format=%h )
 
       - name: Cache polserver
         uses: actions/cache@v2
         with:
-          path: native/polserver
-          key: linux-polserver-${{ steps.get-ref.outputs.ref }}
+          path: native/polserver/bin
+          key: linux-polserver-bin-${{ steps.get-ref.outputs.ref }}
 
       - run: npm install
 
@@ -49,15 +50,16 @@ jobs:
         with:
           submodules: recursive
 
-      - id: get-ref
+      - name: Get polserver HEAD ref
+        id: get-ref
         run: |
           echo ::set-output name=ref::$( cd native/polserver && git log -1 --format=%h )
 
       - name: Cache polserver
         uses: actions/cache@v2
         with:
-          path: native/polserver
-          key: windows-polserver-${{ steps.get-ref.outputs.ref }}
+          path: native/polserver/bin
+          key: windows-polserver-bin-${{ steps.get-ref.outputs.ref }}
 
       - run: npm install
 
@@ -80,15 +82,16 @@ jobs:
         with:
           submodules: recursive
 
-      - id: get-ref
+      - name: Get polserver HEAD ref
+        id: get-ref
         run: |
           echo ::set-output name=ref::$( cd native/polserver && git log -1 --format=%h )
 
       - name: Cache polserver
         uses: actions/cache@v2
         with:
-          path: native/polserver
-          key: mac-polserver-${{ steps.get-ref.outputs.ref }}
+          path: native/polserver/bin
+          key: mac-polserver-bin-${{ steps.get-ref.outputs.ref }}
 
       - name: Set polserver Dependencies
         shell: pwsh
